Final version without JS

--- a/src/frontend/css/base/variables.styl
+++ b/src/frontend/css/base/variables.styl
@@ -11,12 +11,19 @@ $font-secondary = 'Playfair Display', serif
 /*
  * COLORS
  */
-$color-bg-white = #FFFFFF
-$color-bg-grey = #ECEFF1
-$color-black = #07020D
-$color-red = #F44336
 
-$color-red-hover = #BF3328
+$color-bg-purple = #221333
+$color-bg-light-blue = #24becd
+$color-bg-contact = #24b1b3
+$color-bg-contact-button = #ef8834
+$color-header-button = #f4b11b
+$color-font-title = #414141
+$color-font-article = #999997
+$color-header-bg = #22bdcf
+$color-header-button-send = #2591af
+$color-header-product-layer = rgba(37,175,172,0.80)
+$color-header-product-bg = #82f7cc
+$color-about-us-bg = #367c96
 
 $anim = .3s
 
@@ -37,7 +44,7 @@ $screen-xs =                  320px;
 $screen-xs-min =              $screen-xs;
 $screen-phone =               $screen-xs-min;
 
-$screen-sm =                  767px;
+$screen-sm =                  768px;
 $screen-sm-min =              $screen-sm;
 $screen-tablet =              $screen-sm-min;
 
