--- a/src/frontend/views/includes/footer.jade
+++ b/src/frontend/views/includes/footer.jade
@@ -2,16 +2,12 @@ footer.footer
 	.container
 		.footer__col
 			.footer__logo
-				picture
-					source(media='(min-width: 1920px)' srcset='assets/frontend/img/logo-3x.png')
-					source(media='(min-width: 1200px)' srcset='assets/frontend/img/logo-2x.png')
-					source(media='(min-width: 768px)' srcset='assets/frontend/img/logo-1x.png')
-					img(src='assets/frontend/img/logo-0.5x.png', alt='logo', width='113px', height='28px')
+				img(src='assets/frontend/img/logo.png', alt='logo', width='113px', height='28px')
 			a(href='#').footer__link.
 				Terms and Conditions
 		.footer__col
 			a(href='mailto:bizziapp@temify.com').footer__link.
-				E-mail: bizziapp@temify.com
+				E-mail: bizziapp@temify.com<br>
 			a(href='tel:+420232232262').footer__link.
 				Tel.: +420 232 232 262
 		.footer__col
