--- a/src/frontend/css/components/header.styl
+++ b/src/frontend/css/components/header.styl
@@ -1,4 +1,167 @@
 .header
   width 100%
-  height 743px
-  background-color $light-blue
+  height 798px
+  background-color $color-header-bg
+
+  .container
+    position relative
+    background-size cover
+    padding-top 224px
+
+    @media screen and (max-width 96em)
+      padding 224px 30px 0
+
+    @media screen and (max-width $screen-md-max)
+      background-position 73% 0
+
+    @media screen and (max-width $screen-xs-max)
+      padding 120px 15px 0
+      align-items center
+
+    .header__lang
+      display flex
+      flex-direction row
+      align-items baseline
+      position absolute
+      top 14px
+      right 145px
+
+      @media screen and (max-width $screen-md-max)
+        right 30px
+
+      @media screen and (max-width $screen-xs-max)
+        right 15px
+
+      .header__lang_cz
+        font-weight $weight-bold
+        font-size 13px
+        color white
+        text-decoration none
+        border-bottom solid 1px transparent
+        transition border 0.2s ease-in-out
+
+        &:hover
+          border-bottom solid 1px white
+
+      .header__line
+        height 12px
+        width 1px
+        background-color white
+        margin 0 8px
+
+      .header__lang_en
+        font-weight $weight-regular
+        font-size 15px
+        color white
+        text-decoration none
+        border solid 1px transparent
+        transition border 0.2s ease-in-out
+
+        &:hover
+          border-bottom solid 1px white
+
+    .header__logo
+      position relative
+      top -128px
+      left 0
+
+      @media screen and (max-width $screen-xs-max)
+        position absolute
+        top 20px
+        left 15px
+
+    .header__login-wrap
+      position absolute
+      right 145px
+      top 98px
+
+      @media screen and (max-width $screen-md-max)
+        right 30px
+
+      @media screen and (max-width $screen-xs-max)
+        right auto
+        top 100px
+
+      .header__login
+        width 108px
+        height 28px
+        font-weight $weight-regular
+        font-size 15px
+        color white
+        border none
+        padding-bottom 3px
+        background $color-header-button
+
+      .header__hand
+        position absolute
+        top 20px
+        right 0
+
+      .header__product
+        margin-right 25px
+        font-weight $weight-regular
+        font-size 15px
+        color white
+        text-decoration none
+        border-bottom solid 1px transparent
+        transition border 0.2s ease-in-out
+
+        &:hover
+          border-bottom solid 1px white
+
+    .header__title
+      max-width 505px
+      font-weight $weight-bold
+      font-size 58px
+      color white
+      line-height 70px
+      margin-top 0
+      margin-bottom 28px
+
+      @media screen and (max-width $screen-xs-max)
+        max-width 100%
+        text-align center
+        font-size 34px
+        margin-top 60px
+        line-height 50px
+
+    .header__description
+      max-width 424px
+      width 100%
+      font-weight $weight-light
+      font-size 20px
+      color white
+      line-height 28px
+      letter-spacing 0.8px
+      margin-bottom 28px
+
+      @media screen and (max-width $screen-xs-max)
+        margin-left auto
+        margin-right auto
+        text-align center
+        margin-bottom 60px
+
+    .header__email
+      max-width 376px
+      width 100%
+      height 35px
+      background-color rgba(255,255,255,0.92)
+      border 1px solid white
+      font-weight $weight-regular
+      font-size 13px
+      color rgba(65,65,65,0.80)
+      line-height 35px
+      padding-left 15px
+      outline none
+      margin-bottom 7px
+
+    .header__send
+      background-color $color-header-button-send
+      border 1px solid #65cce4
+      max-width 376px
+      width 100%
+      height 35px
+      font-weight $weight-light
+      font-size 16px
+      color white
+      outline none
