--- a/src/frontend/css/imports.styl
+++ b/src/frontend/css/imports.styl
@@ -1,34 +1,18 @@
-
-/*
 @import 'base/normalize'
-@import 'base/variables'
 @import 'base/fonts'
-@import 'base/mixins/*'
-
-@import '_exports/*'
-
-
-@import 'components/*'
-@import 'objects/*'
-@import 'trumps/*'
-@import 'plugins/*'
-*/
-
-$purple = #221333
-$light-blue = #24becd
-
-.container
-  display flex
-  flex-direction column
-  max-width 1452px
-  height 100%
-  margin-left auto
-  margin-right auto
-  padding-left 131px
-  padding-right 151px
-
-@import 'base/normalize'
+@import 'base/variables'
+@import 'base/typography'
 @import 'base/base'
+
+@import 'objects/container'
+
+@import 'plugins/helpers'
 
 @import 'components/header'
 @import 'components/footer'
+
+@import 'sections/header__product'
+@import 'sections/contact'
+@import 'sections/progress'
+@import 'sections/about-us'
+@import 'sections/overview'
