--- a/src/frontend/css/base/variables.styl
+++ b/src/frontend/css/base/variables.styl
@@ -21,7 +21,7 @@ $color-font-title = #414141
 $color-font-article = #999997
 $color-header-bg = #22bdcf
 $color-header-button-send = #2591af
-$color-header-product-layer = rgba(37,175,172,0.80)
+$color-header-product-layer = #25afac
 $color-header-product-bg = #82f7cc
 $color-about-us-bg = #367c96
 
