--- a/src/frontend/css/sections/header__product.styl
+++ b/src/frontend/css/sections/header__product.styl
@@ -7,7 +7,7 @@
   .header__layer
     width 100%
     height 100%
-    background-color $color-header-product-layer
+    background-color rgba($color-header-product-layer , .80)
     position absolute
     top 0
     left 0
@@ -22,7 +22,7 @@
     .header__layer
       width 100%
       height 100%
-      background-color $color-header-product-layer
+      background-color rgba($color-header-product-layer , .80)
       position absolute
       top 0
       left 0
@@ -32,9 +32,6 @@
       text-align center
       margin-top 0
       margin-bottom 0
-
-      @media screen and (max-width $screen-xs-max)
-        margin-top 100px
 
     .header__tablet
       max-width 497px
