--- a/src/frontend/views/includes/footer.jade
+++ b/src/frontend/views/includes/footer.jade
@@ -1,6 +1,6 @@
 footer.footer
 	.container
-		.footer__col
+		.footer__col.footer__col--no-padding
 			.footer__logo
 				img(src='assets/frontend/img/logo.png', alt='logo', width='113px', height='28px')
 			a(href='#').footer__link.
