--- a/src/frontend/views/includes/sections/header__product.jade
+++ b/src/frontend/views/includes/sections/header__product.jade
@@ -1,6 +1,6 @@
 header.header.product
 	.header__layer
-	.container(style='background-image: url(\'../public/assets/frontend/img/header__product.png\');')
+	.container(style='background-image: url(\'assets/frontend/img/header__product.png\');')
 		.header__layer
 		.header__lang
 			a(href='#').header__lang_cz.
@@ -8,7 +8,7 @@ header.header.product
 			.header__line
 			a(href='#').header__lang_en.
 				EN
-		.header__login-wrap
+		.header__login-wrap.header__login-wrap--product
 			a(href='#').header__product.
 				produkt
 			button.header__login.
