--- a/src/frontend/views/index.jade
+++ b/src/frontend/views/index.jade
@@ -10,3 +10,6 @@ block body
     include includes/sections/progress
     include includes/sections/contact
     include includes/footer
+
+    script(src='assets/frontend/js/app.js')
+    script(src='assets/frontend/js/scrollreveal.min.js')
