--- a/src/frontend/css/components/header.styl
+++ b/src/frontend/css/components/header.styl
@@ -6,31 +6,24 @@
   .container
     position relative
     background-size cover
-    padding-top 224px
+    padding-right 145px
 
     @media screen and (max-width 96em)
-      padding 224px 30px 0
+      padding 0 30px
 
     @media screen and (max-width $screen-md-max)
       background-position 73% 0
 
     @media screen and (max-width $screen-xs-max)
-      padding 120px 15px 0
+      padding 0 15px
       align-items center
 
     .header__lang
       display flex
       flex-direction row
       align-items baseline
-      position absolute
-      top 14px
-      right 145px
-
-      @media screen and (max-width $screen-md-max)
-        right 30px
-
-      @media screen and (max-width $screen-xs-max)
-        right 15px
+      margin-top 14px
+      margin-left auto
 
       .header__lang_cz
         font-weight $weight-bold
@@ -60,27 +53,31 @@
         &:hover
           border-bottom solid 1px white
 
-    .header__logo
-      position relative
-      top -128px
-      left 0
+    .header__wrap
+      display flex
+      justify-content space-between
+      width 100%
+      margin 65px 0 98px
 
       @media screen and (max-width $screen-xs-max)
-        position absolute
-        top 20px
-        left 15px
+        flex-direction column
+        align-items center
+        margin 50px 0
+        height 80px
+
+      .header__logo
+        width 113px
 
     .header__login-wrap
-      position absolute
-      right 145px
-      top 98px
+      width 187.5px
 
-      @media screen and (max-width $screen-md-max)
-        right 30px
+      &--product
+        margin 98px 0
+        margin-left auto
 
-      @media screen and (max-width $screen-xs-max)
-        right auto
-        top 100px
+        @media screen and (max-width $screen-xs-max)
+          margin-right auto
+          margin-bottom 70px
 
       .header__login
         width 108px
@@ -90,12 +87,11 @@
         color white
         border none
         padding-bottom 3px
-        background $color-header-button
+        background-color $color-header-button
+        transition background-color 0.2s ease-in-out
 
-      .header__hand
-        position absolute
-        top 20px
-        right 0
+        &:hover
+          background-color rgba($color-header-button, .90)
 
       .header__product
         margin-right 25px
@@ -122,7 +118,6 @@
         max-width 100%
         text-align center
         font-size 34px
-        margin-top 60px
         line-height 50px
 
     .header__description
@@ -145,11 +140,11 @@
       max-width 376px
       width 100%
       height 35px
-      background-color rgba(255,255,255,0.92)
+      background-color rgba(white, 0.92)
       border 1px solid white
       font-weight $weight-regular
       font-size 13px
-      color rgba(65,65,65,0.80)
+      color rgba($color-font-title, 0.80)
       line-height 35px
       padding-left 15px
       outline none
@@ -165,3 +160,7 @@
       font-size 16px
       color white
       outline none
+      transition background-color 0.2s ease-in-out
+
+      &:hover
+        background-color rgba($color-header-button-send, .80)
