--- a/src/frontend/css/sections/contact.styl
+++ b/src/frontend/css/sections/contact.styl
@@ -2,13 +2,13 @@
   width 100%
   background-color $color-bg-contact
   font-weight $weight-light
+  position relative
 
   .container
     min-height 573px
     height 100%
     width 100%
     background-size cover
-    position relative
     align-items center
     padding-top 84px
     padding-bottom 69px
@@ -46,7 +46,7 @@
         height 35px
         font-weight $weight-regular
         font-size 13px
-        color rgba(65,65,65,0.80)
+        color rgba($color-font-title ,0.80)
         line-height 35px
         text-align left
         border none
@@ -67,6 +67,10 @@
       font-size 16px
       line-height 42px
       color white
+      transition background-color 0.2s ease-in-out
+
+      &:hover
+        background-color rgba($color-bg-contact-button, .90)
 
     .contact__contact-us
       font-size 15px
@@ -77,6 +81,11 @@
       font-size 20px
       text-decoration none
       color $color-header-button
+      border-bottom solid 1px transparent
+      transition border 0.3s ease-in-out
+
+      &:hover
+        border-bottom solid 1px $color-header-button
 
     .contact__picture
       position absolute
