--- a/src/frontend/views/includes/sections/about-us.jade
+++ b/src/frontend/views/includes/sections/about-us.jade
@@ -1,5 +1,5 @@
 section.about-us
-	.container(style='background-image: url(\'../public/assets/frontend/img/about-us-cover.png\');')
+	.container(style='background-image: url(\'assets/frontend/img/about-us-cover.png\');')
 		h2.about-us__title.
 			O nás
 		.about-us__article.
