--- a/src/frontend/views/includes/sections/contact.jade
+++ b/src/frontend/views/includes/sections/contact.jade
@@ -1,5 +1,5 @@
 section.contact
-	.container(style='background-image: url(\'../public/assets/frontend/img/contact-cover.png\');')
+	.container(style='background-image: url(\'assets/frontend/img/contact-cover.png\');')
 		h2.contact__title.
 			Buďme efektivní, buďme výkonní, buďme bizzi.
 		.contact__form
