--- a/src/frontend/css/sections/overview.styl
+++ b/src/frontend/css/sections/overview.styl
@@ -1,51 +1,48 @@
 .overview
   padding-top 56px
+  max-width 1440px
+  margin 0 auto
 
-  .container
+  &__row
+    display flex
+    flex-direction row
+    justify-content space-between
+    align-items center
+    min-height 405px
+    margin-bottom 70px
 
-    .overview__row
-      display flex
-      flex-direction row
-      justify-content space-between
-      align-items center
-      min-height 405px
-      margin-bottom 70px
+    @media $screen-xs-max
+      flex-direction column
+      padding 0 30px
 
-      @media screen and (max-width $screen-xs-max)
-        flex-direction column
-        padding 0 30px
+      &-reverse
+        flex-direction column-reverse
 
-        &:nth-child(2), &:last-child
-          flex-direction column-reverse
+  &__article
+    max-width 400px
+    width 100%
+    margin 0 135px
 
-      .overview__article
-        max-width 400px
-        width 100%
-        margin 0 135px
+    @media $screen-md-max
+      margin 0 50px
 
-        @media screen and (max-width $screen-md-max)
-          margin 0 50px
+    @media  $screen-xs-max
+      margin 0 0 80px
 
-        @media screen and (max-width $screen-xs-max)
-          margin 0 0 80px
-          text-align center
+      .overview__title, .overview__text
+        text-align center
 
-          .overview__title
-            text-align center
-          .overview__text
-            text-align center
+  &__title
+    font-weight $weight-bold
+    font-size 30px
+    color $color-font-title
 
-        .overview__title
-          font-weight $weight-bold
-          font-size 30px
-          color $color-font-title
+  &__text
+    font-weight $weight-light
+    font-size 15px
+    color $color-font-article
+    line-height 21px
 
-        .overview__text
-          font-weight $weight-light
-          font-size 15px
-          color $color-font-article
-          line-height 21px
-
-      .overview__pic
-        max-width 704px
-        max-height 405px
+  &__pic
+    max-width 704px
+    max-height 405px
