--- a/src/frontend/views/includes/sections/header__product.jade
+++ b/src/frontend/views/includes/sections/header__product.jade
@@ -1,15 +1,15 @@
-header.header.product
+.header__product
 	.header__layer
 	.container(style='background-image: url(\'assets/frontend/img/header__product.png\');')
 		.header__layer
-		.header__lang
-			a(href='#').header__lang_cz.
+		.header__lang-wrap
+			a(href='#').header__lang.
 				cz
 			.header__line
-			a(href='#').header__lang_en.
+			a(href='#').header__lang.active.
 				EN
-		.header__login-wrap.header__login-wrap--product
-			a(href='#').header__product.
+		.header__login-wrap
+			a(href='#').header__product-link.
 				produkt
 			button.header__login.
 				přihlásit
