--- a/src/frontend/css/base/variables.styl
+++ b/src/frontend/css/base/variables.styl
@@ -56,9 +56,11 @@ $screen-lg =                  1250px;
 $screen-lg-min =              $screen-lg;
 $screen-lg-desktop =          $screen-lg-min;
 
-$screen-xs-max =              ($screen-sm-min - 1);
-$screen-sm-max =              ($screen-md-min - 1);
-$screen-md-max =              ($screen-lg-min - 1);
+$screen-small-land-max =      'screen and (max-width: 500px)';
+$screen-xs-max =              'screen and (max-width: 767px)';    //($screen-sm-min - 1);
+$screen-sm-max =              'screen and (max-width: 1023px)';   //($screen-md-min - 1);
+$screen-md-max =              'screen and (max-width: 1249px)';   //($screen-lg-min - 1);
+$screen-96em-max =            'screen and (max-width: 1536px)';
 /*
 /*
  * RADIUS
