--- a/src/frontend/css/sections/header__product.styl
+++ b/src/frontend/css/sections/header__product.styl
@@ -1,4 +1,4 @@
-.header.product
+.header__product
   height 742px
   width 100%
   background-color $color-header-product-bg
@@ -20,44 +20,57 @@
     z-index 1
 
     .header__layer
-      width 100%
-      height 100%
-      background-color rgba($color-header-product-layer , .80)
-      position absolute
-      top 0
-      left 0
       z-index -1
 
+    .header__lang-wrap
+      margin-right 145px
+
+      @media $screen-96em-max
+        margin-right 30px
+
+      @media $screen-xs-max
+        margin-right 15px
+
+    .header__login-wrap
+      margin 98px 145px 98px auto
+
+      @media $screen-96em-max
+        margin-right 30px
+
+      @media $screen-xs-max
+        margin-right auto
+
     .header__title
+      max-width 621px
       text-align center
       margin-top 0
       margin-bottom 0
 
-    .header__tablet
-      max-width 497px
-      max-height 322px
-      width 100%
-      height auto
-      position absolute
-      bottom 0
+  .header__tablet
+    max-width 497px
+    max-height 322px
+    width 100%
+    height auto
+    position absolute
+    bottom 0
 
-      @media screen and (max-width 31.25em)
-        bottom -4px
+    @media $screen-small-land-max
+      bottom -4px
 
-    .header__slide-up
-      position absolute
-      right 155px
-      bottom 142px
-      cursor pointer
-      z-index 1
+  .header__slide-up
+    position absolute
+    right 155px
+    bottom 142px
+    cursor pointer
+    z-index 1
 
-      @media screen and (max-width $screen-sm-max)
-        bottom 350px
-        right 100px
+    @media $screen-sm-max
+      bottom 350px
+      right 100px
 
-      @media screen and (max-width $screen-xs-max)
-        right auto
-        bottom 360px
+    @media $screen-xs-max
+      right auto
+      bottom 360px
 
-      @media screen and (max-width 31.25em)
-        bottom 300px
+    @media $screen-small-land-max
+      bottom 330px
