--- a/src/frontend/css/sections/progress.styl
+++ b/src/frontend/css/sections/progress.styl
@@ -5,52 +5,52 @@
     flex-flow row wrap
     justify-content center
 
-    .progress__col
-      display flex
-      flex-direction column
-      align-items center
-      margin 0 42px 111px
+  &__col
+    display flex
+    flex-direction column
+    align-items center
+    margin 0 42px 111px
 
-      @media screen and (max-width $screen-xs-max)
-        max-width 400px
-        width 100%
-        margin 0 0 111px
-        padding 0 15px
+    @media $screen-xs-max
+      max-width 400px
+      width 100%
+      margin 0 0 111px
+      padding 0 15px
 
-      .progress__order
-        font-size 20px
-        font-weight $weight-light
-        color $color-font-title
-        margin 15px 0
-        position relative
+  &__order
+    font-size 20px
+    font-weight $weight-light
+    color $color-font-title
+    margin 15px 0
+    position relative
 
-      .progress__order::after
-        content ''
-        width 285px
-        height 1px
-        background-color $color-font-article
-        position absolute
-        top 10px
-        right -335px
+  &__order::after
+    content ''
+    width 285px
+    height 1px
+    background-color $color-font-article
+    position absolute
+    top 10px
+    right -335px
 
-        @media screen and (max-width $screen-md-max)
-          visibility hidden
+    @media $screen-md-max
+      visibility hidden
 
-      .progress__order.progress__order--last::after
-        visibility hidden
+  &__order.progress__order--last::after
+    visibility hidden
 
-      .progress__title
-        font-size 30px
-        font-weight $weight-bold
-        color $color-font-title
-        margin-top 0
-        margin-bottom 30px
+  &__title
+    font-size 30px
+    font-weight $weight-bold
+    color $color-font-title
+    margin-top 0
+    margin-bottom 30px
 
-      .progress__text
-        max-width 315px
-        width 100%
-        font-weight $weight-light
-        font-size 15px
-        line-height 28px
-        text-align center
-        color $color-font-article
+  &__text
+    max-width 315px
+    width 100%
+    font-weight $weight-light
+    font-size 15px
+    line-height 28px
+    text-align center
+    color $color-font-article
