--- a/src/frontend/views/includes/header.jade
+++ b/src/frontend/views/includes/header.jade
@@ -1,16 +1,16 @@
 header.header
 	.container(style='background-image: url(\'assets/frontend/img/header-bg.png\');')
-		.header__lang
-			a(href='#').header__lang_cz.
+		.header__lang-wrap
+			a(href='#').header__lang.
 				cz
 			.header__line
-			a(href='#').header__lang_en.
+			a(href='#').header__lang.active.
 				EN
 		.header__wrap
 			.header__logo
 					img(src='assets/frontend/img/logo.png', alt='logo', width='113px', height='28px')
 			.header__login-wrap
-				a(href='#').header__product.
+				a(href='#').header__product-link.
 					produkt
 				button.header__login.
 					přihlásit
