Corrections and changes

--- a/src/frontend/css/components/header.styl
+++ b/src/frontend/css/components/header.styl
@@ -63,6 +63,8 @@
 
   &__login-wrap
     width 187.5px
+    display flex
+    align-items center
 
   &__login
     width 108px
@@ -136,6 +138,7 @@
     margin-bottom 7px
 
   &__send
+    display block
     background-color $color-header-button-send
     border 1px solid #65cce4
     max-width 376px
