--- a/src/frontend/views/includes/sections/about-us.jade
+++ b/src/frontend/views/includes/sections/about-us.jade
@@ -1,12 +1,13 @@
 section.about-us
 	.container(style='background-image: url(\'assets/frontend/img/about-us-cover.png\');')
-		h2.about-us__title.
-			O nás
-		.about-us__article.
-			Už od samého počátku vývoje jsme se snažili o to, aby Bizziapp dokázal ovládat kdokoli a zároveň v něm
-			každý našel přesně to, co potřebuje. Na první pohled to vypadá jako paradox – a právě takové výzvy
-			vyhledáváme. Bizziapp funguje tak trochu jako stavebnice. Řeknete si, co chcete postavit a my Vám
-			dodáme ty správné kostičky. A návod? Ten nebude potřeba. Vše je zcela intuitivní a vždy po ruce. Nový
-			kontakt rovnou připojíte ke společnosti. Je třeba kontakt oslovit? Jedním kliknutím jste v úkolech,
-			druhým kliknutím již vytváříte obchod a třetím sdílíte mezi další uživatele aplikace. Detailní report na
-			Vás pak čeká sám. Vše je navzájem propojeno. Ty nejlepší řešení totiž bývají ty nejjednodušší.
+		.text-block.align--center
+			h2.about-us__title.
+				O nás
+			.about-us__article.
+				Už od samého počátku vývoje jsme se snažili o to, aby Bizziapp dokázal ovládat kdokoli a zároveň v něm
+				každý našel přesně to, co potřebuje. Na první pohled to vypadá jako paradox – a právě takové výzvy
+				vyhledáváme. Bizziapp funguje tak trochu jako stavebnice. Řeknete si, co chcete postavit a my Vám
+				dodáme ty správné kostičky. A návod? Ten nebude potřeba. Vše je zcela intuitivní a vždy po ruce. Nový
+				kontakt rovnou připojíte ke společnosti. Je třeba kontakt oslovit? Jedním kliknutím jste v úkolech,
+				druhým kliknutím již vytváříte obchod a třetím sdílíte mezi další uživatele aplikace. Detailní report na
+				Vás pak čeká sám. Vše je navzájem propojeno. Ty nejlepší řešení totiž bývají ty nejjednodušší.
