--- a/src/frontend/views/includes/sections/header__product.jade
+++ b/src/frontend/views/includes/sections/header__product.jade
@@ -1,4 +1,4 @@
-.header__product
+.header--product
 	.header__layer
 	.container(style='background-image: url(\'assets/frontend/img/header__product.png\');')
 		.header__layer
@@ -13,8 +13,8 @@
 				produkt
 			button.header__login.
 				přihlásit
-		h1.header__title.
+		h1.header__title.fadeIn.
 			Dokonalé zázemí pro obchodníky
-		.header__tablet
+		.header__tablet.fadeIn
 			img(src='assets/frontend/img/tablet.png', alt='tablet', width='100%', height='auto')
 		img.header__slide-up(src='assets/frontend/img/arrow.png', alt='arrow up', width='27px', height='27px')
