--- a/src/frontend/css/sections/progress.styl
+++ b/src/frontend/css/sections/progress.styl
@@ -1,56 +1,68 @@
 .progress
-  padding-top 111px
+	padding-top 111px
 
-  .container
-    flex-flow row wrap
-    justify-content center
+	.container
+		flex-flow row wrap
+		justify-content center
 
-  &__col
-    display flex
-    flex-direction column
-    align-items center
-    margin 0 42px 111px
+	&__col
+		display flex
+		flex-direction column
+		align-items center
+		margin 0 42px 111px
+		position relative
 
-    @media $screen-xs-max
-      max-width 400px
-      width 100%
-      margin 0 0 111px
-      padding 0 15px
+		@media $screen-xs-max
+			max-width 400px
+			width 100%
+			margin 0 0 111px
+			padding 0 15px
 
-  &__order
-    font-size 20px
-    font-weight $weight-light
-    color $color-font-title
-    margin 15px 0
-    position relative
+		&:not(:last-child)::after
+			content ' '
+			width 285px
+			height 1px
+			background-color $color-font-article
+			position absolute
+			top 190px
+			left 219px
+			opacity 0
+			animation progressLinesAnim 0.4s 1s
+			animation-fill-mode forwards
 
-  &__order::after
-    content ''
-    width 285px
-    height 1px
-    background-color $color-font-article
-    position absolute
-    top 10px
-    right -335px
+			@keyframes progressLinesAnim
+				from
+					opacity 0
+				to
+					opacity 1
 
-    @media $screen-md-max
-      visibility hidden
+			@media $screen-md-max
+				visibility hidden
 
-  &__order.progress__order--last::after
-    visibility hidden
+	&__content
+		text-align center
 
-  &__title
-    font-size 30px
-    font-weight $weight-bold
-    color $color-font-title
-    margin-top 0
-    margin-bottom 30px
+	&__order
+		font-size 20px
+		font-weight $weight-light
+		color $color-font-title
+		margin 15px 0
 
-  &__text
-    max-width 315px
-    width 100%
-    font-weight $weight-light
-    font-size 15px
-    line-height 28px
-    text-align center
-    color $color-font-article
+	&__order.progress__order--last::after
+		visibility hidden
+
+	&__title
+		font-size 30px
+		font-weight $weight-bold
+		color $color-font-title
+		margin-top 0
+		margin-bottom 30px
+
+	&__text
+		max-width 315px
+		width 100%
+		font-weight $weight-light
+		font-size 15px
+		line-height 28px
+		text-align center
+		color $color-font-article
