--- a/src/frontend/views/includes/sections/overview.jade
+++ b/src/frontend/views/includes/sections/overview.jade
@@ -1,5 +1,5 @@
 section.overview
-	.overview__row
+	.overview__row.fadeInLeft
 		.overview__article
 			h2.overview__title.
 				PŘEHLED 360
@@ -16,7 +16,7 @@ section.overview
 				To vše v uživatelsky přátelské formě.
 		.overview__pic
 				img(src='assets/frontend/img/web-design.png', alt='Web Design Temify', width='100%', height='auto')
-	.overview__row.overview__row-reverse
+	.overview__row.overview__row-reverse.fadeInRight
 		.overview__pic
 				img(src='assets/frontend/img/my-tasks.png', alt='Moje úkoly', width='100%', height='auto')
 		.overview__article
@@ -31,7 +31,7 @@ section.overview
 				cokoli, je potřeba. Fronta úkolu zároveň respektuje
 				hierarchii zadání – od firemní, pres týmovou, až po
 				tu individuální.
-	.overview__row
+	.overview__row.fadeInLeft
 		.overview__article
 			h2.overview__title.
 				PRŮVODCE SCHŮZKOU
@@ -48,7 +48,7 @@ section.overview
 				To vše v uživatelsky přátelské formě.
 		.overview__pic
 				img(src='assets/frontend/img/meeting-guide.png', alt='Prúvodce schůzkou - Střední Čechy', width='100%', height='auto')
-	.overview__row.overview__row-reverse
+	.overview__row.overview__row-reverse.fadeInRight
 		.overview__pic
 				img(src='assets/frontend/img/call.png', alt='call', width='100%', height='auto')
 		.overview__article
