--- a/src/frontend/views/includes/footer.jade
+++ b/src/frontend/views/includes/footer.jade
@@ -1,17 +1,18 @@
 footer.footer
 	.container
-		.footer__col.footer__col--no-padding
-			.footer__logo
-				img(src='assets/frontend/img/logo.png', alt='logo', width='113px', height='28px')
-			a(href='#').footer__link.
-				Terms and Conditions
-		.footer__col
-			a(href='mailto:bizziapp@temify.com').footer__link.
-				E-mail: bizziapp@temify.com<br>
-			a(href='tel:+420232232262').footer__link.
-				Tel.: +420 232 232 262
-		.footer__col
-			address.footer__address.
-				Temify consulting, s.r.o.<br>
-				Kolbenova 882/5a<br>
-				190 00 Prague
+		.row
+			.footer__col.col-xs-12.col-sm-4.col-md-3
+				.footer__logo
+					img(src='assets/frontend/img/logo.png', alt='logo', width='113px', height='28px')
+				a(href='#').footer__link.
+					Terms and Conditions
+			.footer__col.col-xs-12.col-sm-4.col-md-3
+				a(href='mailto:bizziapp@temify.com').footer__link.
+					E-mail: bizziapp@temify.com<br>
+				a(href='tel:+420232232262').footer__link.
+					Tel.: +420 232 232 262
+			.footer__col.col-xs-12.col-sm-4.col-md-3
+				address.footer__address.
+					Temify consulting, s.r.o.<br>
+					Kolbenova 882/5a<br>
+					190 00 Prague
