--- a/src/frontend/css/base/base.styl
+++ b/src/frontend/css/base/base.styl
@@ -1,19 +1,19 @@
 a:hover,
 a:active
-    outline none
-    
+		outline none
+		
 body div:focus
-    outline none
+		outline none
 
 img
-    outline none
+		outline none
 
 a:focus
-    outline none
+		outline none
 
 a::-moz-focus-inner
-    border 0
-    
+		border 0
+		
 a:focus, a:active,
 button,
 input[type="reset"]::-moz-focus-inner,
@@ -21,32 +21,34 @@ input[type="button"]::-moz-focus-inner,
 input[type="submit"]::-moz-focus-inner,
 select::-moz-focus-inner,
 input[type="file"] > input[type="button"]::-moz-focus-inner 
-    outline none !important
+		outline none !important
 
 input:not([type=radio]),
 textarea
-    -webkit-appearance none
-    border-radius 0
+		-webkit-appearance none
+		border-radius 0
 
 html
-  box-sizing border-box
+	box-sizing border-box
 
 *, *:before, *:after
-  box-sizing inherit
+	box-sizing inherit
 
 p
-  margin 0
+	margin 0
 
 html
-    font-size 100%
-    -webkit-text-size-adjust: 100%
-    -ms-text-size-adjust: 100%
-    height 100%
-    width 100%
+		font-size 100%
+		-webkit-text-size-adjust: 100%
+		-ms-text-size-adjust: 100%
+		height 100%
+		width 100%
 
 body
-    overflow-x hidden
-    width 100%
-    height 100%
-    set-font-size 16px
-    font-family $font-primary, $font-secondary
+		overflow-x hidden
+		width 100%
+		height 100%
+		set-font-size 16px
+		font-family $font-primary, $font-secondary
+		display flex
+		flex-direction column
