--- a/src/frontend/css/components/footer.styl
+++ b/src/frontend/css/components/footer.styl
@@ -1,41 +1,37 @@
 .footer
-  width 100%
-  min-height 321px
-  background-color $color-bg-purple
-  padding-top 126px
-  font-weight $weight-regular
+	width 100%
+	background-color $color-bg-purple
+	padding 126px 0 133px
+	font-weight $weight-regular
 
-  @media $screen-sm-max
-    padding-top 73px
+	@media $screen-md-max
+		padding 73px 0
+		text-align center
 
-  .container
-    flex-direction row
+	.container
+		flex-direction row
 
-    @media $screen-sm-max
-      flex-direction column
-      text-align center
+		@media $screen-sm-max
+			flex-direction column
+			text-align center
 
-  &__col
-    color white
-    font-size 12px
-    line-height 21px
-    padding-left 125px
-    padding-top 14px
+	&__col
+		color white
+		font-size 12px
+		line-height 21px
+		padding-top 14px
 
-    &--no-padding
-      padding-top 0
+		@media $screen-sm-max
+			margin-bottom 16px
 
-    @media $screen-sm-max
-      padding-left 0
+	&__link
+		color white
+		text-decoration none
+		border-bottom solid 1px transparent
+		transition border 0.2s ease-in-out
 
-  &__link
-    color white
-    text-decoration none
-    border-bottom solid 1px transparent
-    transition border 0.2s ease-in-out
+		&:hover
+			border-bottom solid 1px white
 
-    &:hover
-      border-bottom solid 1px white
-
-  &__address
-    font-style normal
+	&__address
+		font-style normal
