--- a/src/frontend/css/components/header.styl
+++ b/src/frontend/css/components/header.styl
@@ -1,154 +1,161 @@
 .header
-  width 100%
-  height 798px
-  background-color $color-header-bg
+	width 100%
+	flex-grow 1
+	background-color $color-header-bg
+	background-size cover
+	padding-bottom 60px
 
-  .container
-    position relative
-    background-size cover
-    padding-right 145px
+	@media $md-up
+		min-height 798px
+		height 95vh
 
-    @media $screen-96em-max
-      padding 0 30px
+	@media $screen-md-max
+		background-position 73% 0
 
-    @media $screen-md-max
-      background-position 73% 0
+	.container
+		position relative
+		background-size cover
 
-    @media $screen-xs-max
-      padding 0 15px
-      align-items center
+		@media $screen-md-max
+			background-position 73% 0
 
-  &__lang-wrap
-    display flex
-    flex-direction row
-    align-items baseline
-    margin-top 14px
-    margin-left auto
+		@media $screen-xs-max
+			align-items center
 
-  &__lang
-    font-weight $weight-bold
-    font-size 13px
-    color white
-    text-decoration none
-    border-bottom solid 1px transparent
-    transition border 0.2s ease-in-out
+	&__lang-wrap
+		display flex
+		justify-content flex-end
+		align-items baseline
+		margin-top 14px
+		margin-left auto
 
-    &:hover
-      border-bottom solid 1px white
+	&__lang
+		font-weight $weight-bold
+		font-size 13px
+		color white
+		text-decoration none
+		border-bottom solid 1px transparent
+		transition border 0.2s ease-in-out
 
-    &.active
-      font-weight $weight-regular
-      font-size 15px
+		&:hover
+			border-bottom solid 1px white
 
-  &__line
-    height 12px
-    width 1px
-    background-color white
-    margin 0 8px
+		&.active
+			font-weight $weight-regular
+			font-size 15px
 
-  &__wrap
-    display flex
-    justify-content space-between
-    width 100%
-    margin 65px 0 98px
+	&__line
+		height 12px
+		width 1px
+		background-color white
+		margin 0 8px
 
-    @media $screen-xs-max
-      flex-direction column
-      align-items center
-      margin 50px 0
-      height 80px
+	&__wrap
+		display flex
+		justify-content space-between
+		width 100%
+		margin 65px 0 98px
 
-  &__logo
-    width 113px
+		@media $screen-xs-max
+			flex-direction column
+			align-items center
+			margin 50px 0
+			height 80px
 
-  &__login-wrap
-    width 187.5px
-    display flex
-    align-items center
+	&__logo
+		width 113px
 
-  &__login
-    width 108px
-    height 28px
-    font-weight $weight-regular
-    font-size 15px
-    color white
-    border none
-    padding-bottom 3px
-    background-color $color-header-button
-    transition background-color 0.2s ease-in-out
+	&__login-wrap
+		width 187.5px
+		display flex
+		align-items center
 
-    &:hover
-      background-color rgba($color-header-button, .90)
+	&__login
+		width 108px
+		height 28px
+		font-weight $weight-regular
+		font-size 15px
+		color white
+		border none
+		padding-bottom 3px
+		background-color $color-header-button
+		transition background-color 0.2s ease-in-out
 
-  &__product-link
-    margin-right 25px
-    font-weight $weight-regular
-    font-size 15px
-    color white
-    text-decoration none
-    border-bottom solid 1px transparent
-    transition border 0.2s ease-in-out
+		&:hover
+			background-color rgba($color-header-button, .90)
 
-    &:hover
-      border-bottom solid 1px white
+	&__product-link
+		margin-right 25px
+		font-weight $weight-regular
+		font-size 15px
+		color white
+		text-decoration none
+		border-bottom solid 1px transparent
+		transition border 0.2s ease-in-out
 
-  &__title
-    max-width 505px
-    font-weight $weight-bold
-    font-size 58px
-    color white
-    line-height 70px
-    margin-top 0
-    margin-bottom 28px
+		&:hover
+			border-bottom solid 1px white
 
-    @media $screen-xs-max
-      max-width 100%
-      text-align center
-      font-size 34px
-      line-height 50px
+	&__title
+		max-width 505px
+		font-weight $weight-bold
+		font-size 58px
+		color white
+		line-height 70px
+		margin-top 0
+		margin-bottom 28px
 
-  &__description
-    max-width 424px
-    width 100%
-    font-weight $weight-light
-    font-size 20px
-    color white
-    line-height 28px
-    letter-spacing 0.8px
-    margin-bottom 28px
+		@media $screen-xs-max
+			max-width 100%
+			text-align center
+			font-size 34px
+			line-height 50px
 
-    @media $screen-xs-max
-      margin-left auto
-      margin-right auto
-      text-align center
-      margin-bottom 60px
+	&__description
+		max-width 424px
+		width 100%
+		font-weight $weight-light
+		font-size 20px
+		color white
+		line-height 28px
+		letter-spacing 0.8px
+		margin-bottom 28px
 
-  &__email
-    max-width 376px
-    width 100%
-    height 35px
-    background-color rgba(white, 0.92)
-    border 1px solid white
-    font-weight $weight-regular
-    font-size 13px
-    color rgba($color-font-title, 0.80)
-    line-height 35px
-    padding-left 15px
-    outline none
-    margin-bottom 7px
+		@media $screen-xs-max
+			margin-left auto
+			margin-right auto
+			text-align center
+			margin-bottom 60px
 
-  &__send
-    display block
-    background-color $color-header-button-send
-    border 1px solid #65cce4
-    max-width 376px
-    width 100%
-    height 35px
-    font-weight $weight-light
-    font-size 16px
-    color white
-    outline none
-    transition background-color 0.2s ease-in-out
+	&__subscription
+		@media $screen-xs-max
+			text-align center
 
-    &:hover
-      background-color rgba($color-header-button-send, .80)
+	&__email
+		margin-bottom 7px
+		max-width 376px
+		width 100%
+		height 35px
+		background-color rgba(white, 0.92)
+		border 1px solid white
+		font-weight $weight-regular
+		font-size 13px
+		color rgba($color-font-title, 0.80)
+		line-height 35px
+		padding-left 15px
+		outline none
+
+	&__send
+		background-color $color-header-button-send
+		border 1px solid #65cce4
+		max-width 376px
+		width 100%
+		height 35px
+		font-weight $weight-light
+		font-size 16px
+		color white
+		outline none
+		transition background-color 0.2s ease-in-out
+
+		&:hover
+			background-color rgba($color-header-button-send, .80)
