--- a/src/frontend/css/imports.styl
+++ b/src/frontend/css/imports.styl
@@ -1,18 +1,17 @@
 @import 'base/normalize'
-@import 'base/fonts'
 @import 'base/variables'
+@import 'base/fonts'
+@import 'base/mixins/*'
+
 @import 'base/typography'
 @import 'base/base'
 
 @import 'objects/container'
 
-@import 'plugins/helpers'
+@import 'trumps/*'
+@import 'plugins/*'
 
 @import 'components/header'
 @import 'components/footer'
 
-@import 'sections/header__product'
-@import 'sections/contact'
-@import 'sections/progress'
-@import 'sections/about-us'
-@import 'sections/overview'
+@import 'sections/*'
